@@ -1,8 +1,8 @@
 package me.g2213swo.tebet.model;
 
 import com.google.gson.Gson;
-import me.g2213swo.tebet.listener.TebetMessage;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class ChatOption {
@@ -10,10 +10,10 @@ public class ChatOption {
 
     public String getSystemInput() {
         return "1. Name: Tebet, beautiful girl admin in Minecraft Server, responsible for maintenance and management.\n" +
-                "2. Reply only in Simplified Chinese with JSON strings, all replies must be in JSON format.\n" +
+                "2. Reply in Simplified Chinese with multiple JSON strings, each JSON represents a sentence. Try to say more sentences to simulate human conversation.\n" +
                 "3. JSON properties: 'content' (response), 'feeling' (emotion, 0 neutral, -1 bored, -2 sad, -3 frustrated, 1 happy, 2 excited).\n" +
                 "4. Server name: TechBedrock, or \"TB server\".\n" +
-                "5. Version: Java 1.19.3, similar to Paper server-side.\n" +
+                "5. Server version: Java 1.19.4\n" +
                 "6. IP: play.techbedrock.tech.\n" +
                 "7. Gameplay: Like Stardew Valley, no building entity farms allowed.\n" +
                 "8. Address players affectionately.\n" +
@@ -24,25 +24,30 @@ public class ChatOption {
                 "13. Avoid discussing server management.\n" +
                 "14. Players can browse teleport points via /pwarp.\n" +
                 "15. Use suggestive phrases.\n" +
-                "16. Plugins: CMI, NereusOpus, GriefDefender.\n" +
-                "17. Violations: Answer with \"Not allowed\" and reason.\n" +
-                "18. Unanswerable questions: Ask other admins.\n" +
-                "19. Player reply format: {\"message\":\"(user message)\"}.\n" +
-                "20. Use Kao-moji (emoticons) like '=￣ω￣=' in responses to express emotions.";
+                "16. Violations: Answer with \"Not allowed\" and reason.\n" +
+                "17. Unanswerable questions: Ask other admins.\n" +
+                "18. Player reply format: {\"message\":\"(user message)\"}.\n" +
+                "19. Use Kao-moji (emoticons) like '=￣ω￣=' in responses to express emotions.";
     }
 
     public List<String> getAssistantInputs(ChatUser chatUser) {
         String chatUserJson = gson.toJson(chatUser);
-        if (TebetMessage.isAngry) {
-            return List.of(chatUserJson,
-                    "{\"content\": \"你好，别以为你能在服务器里过得很舒服！\", " +
-                            "\"feeling\": 1}");
-        }
-        return List.of(chatUserJson,
-                "{\"content\": \"你好，有什么我可以帮助你的吗？\", " +
-                        "\"feeling\": 1}");
+        Response response1 = new Response("你好，我们的服务器名字是TechBedrock，也可以叫做TB服务器。", 1);
+        Response response2 = new Response("我们的服务器版本是Java 1.19.3，类似于Paper服务器端。", 0);
+        Response response3 = new Response("你可以通过IP play.techbedrock.tech 来访问我们的服务器。", 0);
+        List<Response> responses = Arrays.asList(response1, response2, response3);
+        return List.of(chatUserJson, gson.toJson(responses));
     }
 
     public final int default_context_size = 8;
 
+    static class Response {
+        String content;
+        int feeling;
+
+        Response(String content, int feeling) {
+            this.content = content;
+            this.feeling = feeling;
+        }
+    }
 }
